# stackbench

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  STACKBENCH_ADAPTER_CONTRACT.md  STACKBENCH_AGENTS.md  STACKBENCH_ARCHITECTURE.md  STACKBENCH_CANONICAL_STATE.md  STACKBENCH_CUTOVER_CHECKLIST.md  STACKBENCH_DESKTOP_PLAN.md  STACKBENCH_EVAL_LEASE_RUNTIME.md  STACKBENCH_GAP_CLOSURE.md  STACKBENCH_GSTACK_SPEC.md  STACKBENCH_INGRESS_SPEC.md  STACKBENCH_PERSONA_PROFILE_MAPPING.md  STACKBENCH_REPO_LAYOUT.md  STACKBENCH_ROADMAP.md  STACKBENCH_V2_ADAPTER_CONTRACT.md  STACKBENCH_V2_AGENTS.md  STACKBENCH_V2_ARCHITECTURE.md  STACKBENCH_V2_CANONICAL_STATE.md  STACKBENCH_V2_DESKTOP_PLAN.md  STACKBENCH_V2_EVAL_LEASE_RUNTIME.md  STACKBENCH_V2_GAP_CLOSURE.md  STACKBENCH_V2_GSTACK_SPEC.md  STACKBENCH_V2_PERSONA_PROFILE_MAPPING.md  STACKBENCH_V2_REPO_LAYOUT.md  STACKBENCH_V2_ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
crates/swb-adapters/: Cargo.toml
crates/swb-adapters/src/: lib.rs
crates/swb-cli/: Cargo.toml
crates/swb-cli/src/: lib.rs  main.rs
crates/swb-config/: Cargo.toml
crates/swb-config/src/: lib.rs
crates/swb-core/: Cargo.toml
crates/swb-core/src/: lib.rs
crates/swb-eval/: Cargo.toml
crates/swb-eval/src/: lib.rs
crates/swb-ingress-http/: Cargo.toml
crates/swb-ingress-http/src/: lib.rs
crates/swb-jj/: Cargo.toml
crates/swb-jj/src/: lib.rs
crates/swb-launcher/: Cargo.toml
crates/swb-launcher/src/: lib.rs
crates/swb-queue-sqlite/: Cargo.toml
crates/swb-queue-sqlite/src/: lib.rs
crates/swb-receiver/: Cargo.toml
crates/swb-receiver/src/: lib.rs
crates/swb-state/: Cargo.toml
crates/swb-state/src/: lib.rs
desktop/: forge.config.ts  package.json  playwright.config.ts  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
desktop/src/: main.ts  preload.ts
desktop/src/renderer/: index.html  renderer.ts  styles.css
desktop/tests/: desktop-smoke.spec.ts
scripts/: swb-jj.sh
swb/personas/linear/: linear-review.toml
swb/personas/slack/: slack-deploy.toml  slack-review.toml
swb/profiles/: deploy.md  eng-review.md
swb/prompts/runtime/: default.md
