[package]
name = "swb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "swb"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
swb-adapters = { path = "../swb-adapters" }
swb-config = { path = "../swb-config" }
swb-core = { path = "../swb-core" }
swb-jj = { path = "../swb-jj" }
swb-launcher = { path = "../swb-launcher" }
swb-queue-sqlite = { path = "../swb-queue-sqlite" }
swb-receiver = { path = "../swb-receiver" }
swb-state = { path = "../swb-state" }

[lints]
workspace = true
