[package]
name = "swb-ingress-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
swb-config = { path = "../swb-config" }
swb-core = { path = "../swb-core" }
swb-queue-sqlite = { path = "../swb-queue-sqlite" }
swb-receiver = { path = "../swb-receiver" }
swb-state = { path = "../swb-state" }

[dev-dependencies]
http-body-util = "0.1"

[lints]
workspace = true
