[package]
name = "swb-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
swb-adapters = { path = "../swb-adapters" }
swb-config = { path = "../swb-config" }
swb-core = { path = "../swb-core" }
swb-eval = { path = "../swb-eval" }
swb-jj = { path = "../swb-jj" }
swb-queue-sqlite = { path = "../swb-queue-sqlite" }
swb-receiver = { path = "../swb-receiver" }
swb-state = { path = "../swb-state" }

[lints]
workspace = true
