[package]
name = "swb-receiver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
swb-core = { path = "../swb-core" }
swb-queue-sqlite = { path = "../swb-queue-sqlite" }
swb-state = { path = "../swb-state" }

[lints]
workspace = true
